[tool.poetry]
name = "vivid"
version = "0.1.0"
description = "Vision Language model for Unified Visual Understanding of Documents"
authors = ["Adithya S K <adithyaskolavi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
